# internal/repository/models.go
@@ -1,0 +1,18 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package repository
+
+import (
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type Voucher struct {
+	ID              pgtype.UUID        `json:"id"`
+	VoucherCode     string             `json:"voucher_code"`
+	DiscountPercent int32              `json:"discount_percent"`
+	ExpiryDate      pgtype.Timestamptz `json:"expiry_date"`
+	CreatedAt       pgtype.Timestamp   `json:"created_at"`
+	UpdatedAt       pgtype.Timestamp   `json:"updated_at"`
+}
